--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,4 +1,72 @@
-<div>
+<div class="container">
+    <div class="row">
+        <div class="jumbotron">
+            <h1 class="text-center">Welcome to Teachr!</h1>
+            <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
+                <fieldset>
+                    <div class="form-group" show-errors>
+                    <uib-alert type="danger" ng-show="vm.error" class="text-center text-danger">
+                        <span ng-bind="vm.error"></span>
+                    </uib-alert>
+                <div class="panel-group">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a>Sign In</a>
+                            </h4>
+                        </div>
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-sm-8" style="border-right: 1px solid #333;">
+                                    <div class="form-group row">
+                                        <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Email</label>
+                                        <div class="col-sm-8">
+                                                <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control" ng-model="vm.credentials.usernameOrEmail" placeholder="Enter your Email" required autofocus>
+                                        </div>
+                                        <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
+                                                <p class="help-block error-text" ng-message="required">Username or Email is required.</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row" show-errors>
+                                        <label for="inputPassword" class="col-sm-4 col-form-label text-right">Password</label>
+                                        <div class="col-sm-8">
+                                            <input type="password" class="form-control" id="inputPassword" ng-model="vm.credentials.password" placeholder="Enter your password" required>
+                                        </div>
+                                        <div ng-messages="vm.userForm.password.$error" role="alert">
+                                                <p class="help-block error-text" ng-message="required">Password is required.</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-sm-4"></div>
+                                        <div class="col-sm-8">
+                                            <label>
+                                                <input type="checkbox" checked="checked" name="remember"> Remember me
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="form-group row">
+                                        <div class="col-sm-offset-4">
+                                          <button type="submit" id="loginBtn" class="btn btn-primary btn-lg">Sign in</button>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                      <p class="col-sm-offset-4">
+                                        <a ui-sref="authentication.signup">Sign up</a>
+                                      </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- <div>
   <h3 class="col-xs-12 text-center">Or with your account</h3>
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
     <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
@@ -32,4 +100,4 @@
       </fieldset>
     </form>
   </div>
-</div>
+</div> -->
