--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,32 +1,32 @@
 <div>
-  <h3 class="col-xs-12 text-center">Or sign up using your email</h3>
+  <h3 class="col-xs-12 text-center">Sign up using your UFL email</h3>
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
     <form name="vm.userForm" ng-submit="vm.signup(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="firstName">First Name</label>
+          <label for="firstName">First Name <span style="color:red; margin: auto">*</span></label>
           <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.credentials.firstName" placeholder="First Name" required autofocus>
           <div ng-messages="vm.userForm.firstName.$error" role="alert">
             <p class="help-block error-text" ng-message="required">First name is required.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="lastName">Last Name</label>
+          <label for="lastName">Last Name <span style="color:red; margin: auto">*</span></label>
           <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.credentials.lastName" placeholder="Last Name" required>
           <div ng-messages="vm.userForm.lastName.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Last name is required.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email" placeholder="Email" lowercase required>
+          <label for="email">UFL Email <span style="color:red; margin: auto">*</span></label>
+          <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email" placeholder="example@ufl.edu" lowercase required>
           <div ng-messages="vm.userForm.email.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Email address is required.</p>
             <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="username">Username</label>
+          <label for="username">Username <span style="color:red; margin: auto">*</span></label>
           <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" ng-pattern="vm.usernameRegex" placeholder="Username" lowercase required>
           <div ng-messages="vm.userForm.username.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Username is required.</p>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="password">Password</label>
+          <label for="password">Password <span style="color:red; margin: auto">*</span></label>
             <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password" placeholder="Password" uib-popover="{{vm.getPopoverMsg()}}" popover-trigger="outsideClick" password-validator required>
           <div ng-messages="vm.userForm.password.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Password is required.</p>
@@ -46,6 +46,21 @@
         <div class="form-group" ng-show="!vm.userForm.password.$error.required">
           <label>Password Requirements</label>
           <uib-progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></uib-progressbar>
+        </div>
+        <!--Role-->
+        <div class="form-group" show-errors>
+          <label for="type">Role <span style="color:red; margin: auto">*</span></label>
+          &nbsp; &nbsp;
+          <div class='form-group'>
+            <input type="radio" id="radioButton" name="gender" ng-model="vm.credentials.type" Value="student"> &nbsp;Student
+            &nbsp;
+            <input type="radio" id="radio" name="gender" ng-model="vm.credentials.type" Value="instructor"> &nbsp;Instructor/Researcher/Staff
+            &nbsp;
+            
+          </div>
+          <!-- <div ng-messages="vm.userForm.gender.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Gender is required.</p>
+          </div> -->
         </div>
         <div class="text-center form-group">
           <button type="submit" class="btn btn-primary">Sign up</button>
