add student module and instructor tab in the menu, changed users schema

--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -49,12 +49,12 @@
         </div>
         <!--Role-->
         <div class="form-group" show-errors>
-          <label for="type">Role <span style="color:red; margin: auto">*</span></label>
+          <label for="roles">Role <span style="color:red; margin: auto">*</span></label>
           &nbsp; &nbsp;
           <div class='form-group'>
-            <input type="radio" id="radioButton" name="gender" ng-model="vm.credentials.type" Value="student"> &nbsp;Student
+            <input type="radio" id="radioButton" name="roles" ng-model="vm.credentials.roles" Value="user"> &nbsp;Student
             &nbsp;
-            <input type="radio" id="radio" name="gender" ng-model="vm.credentials.type" Value="instructor"> &nbsp;Instructor/Researcher/Staff
+            <input type="radio" id="radio" name="roles" ng-model="vm.credentials.roles" Value="instructor"> &nbsp;Instructor/Researcher/Staff
             &nbsp;
             
           </div>
