--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,28 +18,18 @@
     </div>
   </div>
   <div>
-    <h2>Congrats! You've configured and run the sample application.</h2>
-    <p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
-    <p>This sample application tracks users and articles.</p>
-    <ul>
-      <li>
-        Click
-        <em>Sign Up</em> to get started.
-      </li>
-      <li>
-        Configure your app to work with your social accounts, by editing the
-        <em>/config/env/*.js</em> files.
-      </li>
-      <li>
-        Edit your users module.
-      </li>
-      <li>
-        Add new CRUD modules.
-      </li>
-      <li>
-        Have fun...
-      </li>
-    </ul>
+    <table class="table table-striped table-hover">
+              <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Professors</th>
+              </tr>
+              <!-- <tr ng-repeat="listing in listings | filter: query" ng-click="showDetails($index)"> -->
+                <!-- <td>{{listing.code}}</td> -->
+                <!-- <td>{{listing.name}}</td> -->
+                <!-- <td ng-click="deleteListing($index)"><span style="color: red;" class="glyphicon glyphicon-remove"></span></td> -->
+              <!-- </tr> -->
+    </table>
   </div>
   <div class="row">
     <div class="col-md-3">
