basica homepage set up with styles

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,8 +1,46 @@
-#searchBar {
-  margin: 15px 10px;
+#professor_container{
+  margin: auto;
+  width: 100%;
+  padding: 10px;
+}
+#table_container {
+  padding-left: 0px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-.tableWrapper {
-  max-height: 400px;
-  overflow: auto;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+#prof_info {
+  margin: auto;
+  width: 50%;
+  background-color: lightgrey;
+}
+#map {
+  position:absolute;
+  margin-top: 48px;
+  top:0;
+  bottom:0;
+  width:100%; 
+}
+#search-bar{
+  margin-bottom:10px;
 }
