--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -64,3 +64,22 @@ li a:hover {
 {
   color: yellow;
 }
+.panel-group {
+  margin-bottom: 0px !important;
+}
+#panel1{
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: none;
+}
+#panel2{
+  border-radius: 0;
+}
+#panel3{
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top: none;
+}
+#edit-modal-body{
+  padding: 9px !important;
+}
