--- a/client/js/views/index.html
+++ b/client/js/views/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>PixMapApp</title>
+    <title>Teachr</title>
 
 
     <!-- MapBox Style Sheet and CDN -->
@@ -40,24 +40,23 @@
 
     <!-- Angular Config/Routes -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/routes.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/router.js"></script>
 
     <!-- Angular Controllers -->
-    <script src="app/controllers/mainController.js"></script>
-    <script src="app/controllers/userController.js"></script>
-    <script src="app/controllers/profileController.js"></script>
-    <script src="app/controllers/aboutController.js"></script>
-    <script src="app/controllers/contactController.js"></script>
-    <script src="app/controllers/settingsController.js"></script>
-    <script src="app/controllers/activationController.js"></script>
+    <script src="js/controllers/editController.js"></script>
+    <script src="js/controllers/listingController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/mainController.js"></script>
 
     <!-- Angular Services  -->
-    <script src="app/services/userServices.js"></script>
-    <script src="app/services/authServices.js"></script>
-    <script src="app/services/locationServices.js"></script>
-    <script src="app/services/contactServices.js"></script>
-    <script src="app/services/uploadServices.js"></script>
+    <script src="js/factories/authService.js"></script>
+    <script src="js/factories/listingFactory.js"></script>
+    <script src="js/factories/userService.js"></script>
+    
 
     <!-- Fly In Text Configuration -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
