--- a/client/views/search.modal.view.html
+++ b/client/views/search.modal.view.html
@@ -26,7 +26,7 @@
                 <td><span ng-repeat="list in listing.instructor_names">{{list}}</span></td>
                 <td>{{listing.department}}</td>
                 <td>{{listing.description}}</td>
-                <td>{{listing.building}}</td>
+                <td>{{listing.building}}<button ng-click="findLocation($index)">click me</button><span>{{mapLat}} {{mapLong}}</span></td>
                 <!-- <td>
                               <h2>Update Listing</h2>
                               Code: <input type="text" ng-model="newListing.code" /><br />
