--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -3,60 +3,21 @@
     <h1 class="text-center">Welcome to Teachr!</h1>
 </div>
 <div class="modal-body">
-    <form name="vm.userForm" ng-submit="vm.signin(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
-        <fieldset>
-            <div class="form-group" show-errors>
-                <uib-alert type="danger" ng-show="vm.error" class="text-center text-danger">
-                    <span ng-bind="vm.error"></span>
-                </uib-alert>
-                <div class="row">
-                    <div class="col-sm-8" style="border-right: 1px solid #333;">
-                        <div class="form-group row" style="margin-top:15px">
-                            <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Email</label>
-                            <div class="col-sm-8">
-                                <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control"
-                                    ng-model="vm.credentials.usernameOrEmail" placeholder="Enter your Email" required
-                                    autofocus>
-                                <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
-                                    <p class="help-block error-text" ng-message="required"><span style="text-align: center">Email
-                                            is required.</span></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row" show-errors>
-                            <label for="inputPassword" class="col-sm-4 col-form-label text-right">Password</label>
-                            <div class="col-sm-8">
-                                <input type="password" class="form-control" id="inputPassword" ng-model="vm.credentials.password"
-                                    placeholder="Enter your password" required>
-                                <div ng-messages="vm.userForm.password.$error" role="alert">
-                                    <p class="help-block error-text" ng-message="required">Password is
-                                        required.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-4"></div>
-                            <div class="col-sm-8">
-                                <label>
-                                    <input type="checkbox" checked="checked" name="remember"> Remember me
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="form-group" style="margin-top:69px">
-                            <div id="col-center">
-                                <button type="submit" id="loginBtn" class="btn btn-primary btn-lg">Login</button>
-                            </div>
-                            <p id="col-center" style="margin-top:5px">
-                                <a ui-sref="authentication.signup">Sign up</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-    </form>
+    <input type="text" placeholder="Username" ng-model="vm.loginData.username" class="form-control" required>
+    <br/>
+    <input type="password" placeholder="Password" ng-model="vm.loginData.password" required class="form-control">
+    <hr/>
+    <button class="btn btn-success form-control" ng-click="vm.logIn(vm.loginData)">Enter</button>
+    <hr/>
+    <div ng-if="formError" class="alert alert-warning">
+        Please fill out form properly!
+    </div>
+    <div ng-if="inputError" class="alert alert-danger">
+        Incorrect Username/Password!
+    </div>
+    <a ui-sref="/signup" class="btn btn-info form-control" role="button">Create Account</a>
+    </div>
+    <div class="col-md-3"></div>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
