--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -15,7 +15,7 @@
                             <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Email</label>
                             <div class="col-sm-8">
                                 <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control"
-                                    ng-model="vm.credentials.usernameOrEmail" placeholder="Enter your Email" required
+                                    ng-model="vm.loginData.username" placeholder="Enter your Email" required
                                     autofocus>
                                 <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
                                     <p class="help-block error-text" ng-message="required"><span style="text-align: center">Email
@@ -26,7 +26,7 @@
                         <div class="form-group row" show-errors>
                             <label for="inputPassword" class="col-sm-4 col-form-label text-right">Password</label>
                             <div class="col-sm-8">
-                                <input type="password" class="form-control" id="inputPassword" ng-model="vm.credentials.password"
+                                <input type="password" class="form-control" id="inputPassword" ng-model="vm.loginData.password"
                                     placeholder="Enter your password" required>
                                 <div ng-messages="vm.userForm.password.$error" role="alert">
                                     <p class="help-block error-text" ng-message="required">Password is
@@ -34,22 +34,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <!-- <div class="form-group row">
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8">
                                 <label>
                                     <input type="checkbox" checked="checked" name="remember"> Remember me
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-sm-4">
                         <div class="form-group" style="margin-top:69px">
                             <div id="col-center">
-                                <button type="submit" id="loginBtn" class="btn btn-primary btn-lg">Login</button>
+                                <button type="submit" id="loginBtn" ng-click="vm.logIn(vm.loginData)"class="btn btn-primary btn-lg">Login</button>
                             </div>
                             <p id="col-center" style="margin-top:5px">
-                                <a ui-sref="authentication.signup">Sign up</a>
+                                <a ui-sref="signup">Sign up</a>
                             </p>
                         </div>
                     </div>
