--- a/client/views/signup.modal.view.html
+++ b/client/views/signup.modal.view.html
@@ -8,33 +8,17 @@
         <form name="vm.userForm" ng-submit="vm.signup(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
             <fieldset>
                 <div class="form-group" show-errors>
-                    <label for="firstName">First Name <span style="color:red; margin: auto">*</span></label>
-                    <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.credentials.firstName"
-                        placeholder="First Name" required autofocus>
-                    <div ng-messages="vm.userForm.firstName.$error" role="alert">
-                        <p class="help-block error-text" ng-message="required">First name is required.</p>
-                    </div>
-                </div>
-                <div class="form-group" show-errors>
-                    <label for="lastName">Last Name <span style="color:red; margin: auto">*</span></label>
-                    <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.credentials.lastName"
-                        placeholder="Last Name" required>
-                    <div ng-messages="vm.userForm.lastName.$error" role="alert">
-                        <p class="help-block error-text" ng-message="required">Last name is required.</p>
-                    </div>
-                </div>
-                <div class="form-group" show-errors>
                     <label for="email">UFL Email <span style="color:red; margin: auto">*</span></label>
-                    <input type="email" id="email" name="email" class="form-control" ng-model="vm.credentials.email"
+                    <input type="email" id="email" name="email" class="form-control" ng-model="vm.registerData.email"
                         placeholder="example@ufl.edu" lowercase required>
                     <div ng-messages="vm.userForm.email.$error" role="alert">
                         <p class="help-block error-text" ng-message="required">Email address is required.</p>
                         <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
                     </div>
                 </div>
-                <div class="form-group" show-errors>
+                <div class="form-group" show-er rors>
                     <label for="username">Username <span style="color:red; margin: auto">*</span></label>
-                    <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username"
+                    <input type="text" id="username" name="username" class="form-control" ng-model="vm.registerData.username"
                         ng-pattern="vm.usernameRegex" placeholder="Username" lowercase required>
                     <div ng-messages="vm.userForm.username.$error" role="alert">
                         <p class="help-block error-text" ng-message="required">Username is required.</p>
@@ -47,7 +31,7 @@
                 </div>
                 <div class="form-group" show-errors>
                     <label for="password">Password <span style="color:red; margin: auto">*</span></label>
-                    <input type="password" id="password" name="password" class="form-control" ng-model="vm.credentials.password"
+                    <input type="password" id="password" name="password" class="form-control" ng-model="vm.registerData.password"
                         placeholder="Password" uib-popover="{{vm.getPopoverMsg()}}" popover-trigger="outsideClick"
                         password-validator required>
                     <div ng-messages="vm.userForm.password.$error" role="alert">
@@ -81,7 +65,7 @@
                 <div class="text-center form-group">
                     <button type="submit" class="btn btn-primary">Sign up</button>
                     &nbsp; or&nbsp;
-                    <a ui-sref="authentication.signin" class="show-signup">Sign in</a>
+                    <a ui-sref="signin" class="show-signup">Sign in</a>
                 </div>
             </fieldset>
         </form>
