--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <button type="button" class="close" ng-click="vm.cancel()" data-dismiss="modal">&times;</button>
     <h1 class="text-center">Welcome to Teachr!</h1>
 </div>
 <div class="modal-body">
@@ -59,5 +59,5 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-default" ng-click="vm.cancel()" data-dismiss="modal">Close</button>
 </div>
