--- a/client/views/signup.modal.view.html
+++ b/client/views/signup.modal.view.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <button type="button" class="close" ng-click="vm.cancel()" data-dismiss="modal">&times;</button>
     <h1 class="text-center">Welcome to Teachr!</h1>
 </div>
 <div class="modal-body row">
@@ -63,14 +63,14 @@
                       </div> -->
                 </div>
                 <div class="text-center form-group">
-                    <button type="submit" class="btn btn-primary">Sign up</button>
+                    <button type="submit" class="btn btn-primary" ng-click="vm.register(registerData)">Sign up</button>
                     &nbsp; or&nbsp;
-                    <a ui-sref="signin" class="show-signup">Sign in</a>
+                    <a ui-sref="signin" ng-click="$dismiss('cancel')" class="show-signup">Sign in</a>
                 </div>
             </fieldset>
         </form>
     </div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-default" ng-click="vm.cancel()" data-dismiss="modal">Close</button>
 </div>
