--- a/client/views/signup.modal.view.html
+++ b/client/views/signup.modal.view.html
@@ -63,7 +63,7 @@
                       </div> -->
                 </div>
                 <div class="text-center form-group">
-                    <button type="submit" class="btn btn-primary" ng-click="vm.register(registerData)">Sign up</button>
+                    <button type="submit" class="btn btn-primary" ng-click="vm.register()">Sign up</button>
                     &nbsp; or&nbsp;
                     <a ui-sref="signin" ng-click="$dismiss('cancel')" class="show-signup">Sign in</a>
                 </div>
