got to the point of User, post doesnt work

--- a/client/views/signup.modal.view.html
+++ b/client/views/signup.modal.view.html
@@ -50,10 +50,10 @@
                     <label for="type">Role <span style="color:red; margin: auto">*</span></label>
                     &nbsp; &nbsp;
                     <div class='form-group'>
-                        <input type="radio" id="radioButton" name="gender" ng-model="vm.credentials.type" Value="student">
+                        <input type="radio" id="radioButton" name="gender" ng-model="vm.registerData.role" Value="student">
                         &nbsp;Student
                         &nbsp;
-                        <input type="radio" id="radio" name="gender" ng-model="vm.credentials.type" Value="instructor">
+                        <input type="radio" id="radio" name="gender" ng-model="vm.registerData.role" Value="instructor">
                         &nbsp;Instructor/Researcher/Staff
                         &nbsp;
 
