--- a/client/views/professor.modal.view.html
+++ b/client/views/professor.modal.view.html
@@ -6,7 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title"> *Professor/Course/TA*'s Office Hours</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" ng-app="directoryApp">
                 <!-- 
               Things that need to go here:
                 - Twitter
@@ -18,6 +18,7 @@
                 <div id="officeHours">
                     <label for="officeHours">Office Hours</label>
                     <p>M/W/F 3:00PM - 3:50PM</p>
+                    <div>input goes here</div>
                 </div>
                 <div id="research">
                     <label for="research">Research Opportunities</label>
