frontend communicates with backend but does not send a response

--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -49,7 +49,7 @@
                                 <button type="submit" id="loginBtn" ng-click="vm.logIn(vm.loginData)"class="btn btn-primary btn-lg">Login</button>
                             </div>
                             <p id="col-center" style="margin-top:5px">
-                                <a ui-sref="signup">Sign up</a>
+                                <a ui-sref="signup" ng-click="$dismiss('cancel')">Sign up</a>
                             </p>
                         </div>
                     </div>
