--- a/client/views/signup.modal.view.html
+++ b/client/views/signup.modal.view.html
@@ -50,7 +50,7 @@
                     <label for="type">Role <span style="color:red; margin: auto">*</span></label>
                     &nbsp; &nbsp;
                     <div class='form-group'>
-                        <input type="radio" id="radioButton" name="gender" ng-model="vm.registerData.role" Value="student">
+                        <input type="radio" id="radioButton" name="gender" ng-model="vm.registerData.role" Value="user">
                         &nbsp;Student
                         &nbsp;
                         <input type="radio" id="radio" name="gender" ng-model="vm.registerData.role" Value="instructor">
