--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -15,8 +15,7 @@
                             <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Email</label>
                             <div class="col-sm-8">
                                 <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control"
-                                    ng-model="vm.loginData.username" placeholder="Enter your Email" required
-                                    autofocus>
+                                    ng-model="vm.loginData.username" placeholder="Enter your Email" required autofocus>
                                 <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
                                     <p class="help-block error-text" ng-message="required"><span style="text-align: center">Email
                                             is required.</span></p>
@@ -46,7 +45,7 @@
                     <div class="col-sm-4">
                         <div class="form-group" style="margin-top:69px">
                             <div id="col-center">
-                                <button type="submit" id="loginBtn" ng-click="vm.logIn(vm.loginData)"class="btn btn-primary btn-lg">Login</button>
+                                <button type="submit" id="loginBtn" ng-click="vm.logIn(vm.loginData)" class="btn btn-primary btn-lg">Login</button>
                             </div>
                             <p id="col-center" style="margin-top:5px">
                                 <a ui-sref="signup" ng-click="$dismiss('cancel')">Sign up</a>
