--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -45,7 +45,7 @@
                     <div class="col-sm-4">
                         <div class="form-group" style="margin-top:69px">
                             <div id="col-center">
-                                <button type="submit" id="loginBtn" ng-click="vm.logIn(vm.loginData)" class="btn btn-primary btn-lg">Login</button>
+                                <button type="submit" id="loginBtn" ng-click="vm.login()" class="btn btn-primary btn-lg">Login</button>
                             </div>
                             <p id="col-center" style="margin-top:5px">
                                 <a ui-sref="signup" ng-click="$dismiss('cancel')">Sign up</a>
