attempted to set up alerts!

--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -1,3 +1,4 @@
+<!-- <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div> -->
 <div class="modal-header">
     <button type="button" class="close" ng-click="vm.cancel()" data-dismiss="modal">&times;</button>
     <h1 class="text-center">Welcome to Teachr!</h1>
