added path dismissal for all modals

--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -134,5 +134,5 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="$ctrl.ok()" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
 </div>
