cleaning up map code and putting everything where it should be

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -74,6 +74,25 @@ li a:hover {
 .table {
   margin-bottom: 0px !important;
 }
+
+.marker {
+  background-image: url('assets/mapbox_icon.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
 #panel1{
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
