request username instead of email

--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -13,12 +13,12 @@
                 <div class="row">
                     <div class="col-sm-8" style="border-right: 1px solid #333;">
                         <div class="form-group row" style="margin-top:15px">
-                            <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Email</label>
+                            <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Username</label>
                             <div class="col-sm-8">
                                 <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control"
-                                    ng-model="vm.loginData.username" placeholder="Enter your Email" required autofocus>
+                                    ng-model="vm.loginData.username" placeholder="Enter your Username" required autofocus>
                                 <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
-                                    <p class="help-block error-text" ng-message="required"><span style="text-align: center">Email
+                                    <p class="help-block error-text" ng-message="required"><span style="text-align: center">Username
                                             is required.</span></p>
                                 </div>
                             </div>
