holy fuck it fucking works it fucking works fuck me fucking shit fuck life this is dumb

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -92,4 +92,6 @@ li a:hover {
 #cell:hover {
   background-color: lightskyblue;
 }
-
+.table>tbody>tr>td.active {
+  background-color: blue !important;
+}
