--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -76,7 +76,7 @@ li a:hover {
 }
 
 .marker {
-  background-image: url('assets/mapbox_icon.png');
+  background-image: url('assets/pin_icon.png');
   background-size: cover;
   width: 50px;
   height: 50px;
