--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -55,22 +55,30 @@
                 <div class="panel panel-default" id="panel2">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse2">Add a Research Position...</a>
+                            <a data-toggle="collapse" href="#collapse2" ng-click="$ctrl.getCurrentResearch()">Add a Research Position...</a>
                         </h4>
                     </div>
                     <div id="collapse2" class="panel-collapse collapse">
                         <div class="panel-body">
                             <div class="form-group">
-                                <h4>
+                                <!-- <h4>
                                     Research Position(s)
-                                </h4>
+                                </h4> -->
                                 <div id="research-pos-field">
                                     <div class="row">
-                                        <label for="researchArea">Area of Research</label>
+                                        <h4> Research Position(s)</h4>
+                                        <br>
+                                        <label for="researchArea">Details of Research</label>
+                                        <div ng-bind="$ctrl.currentdetail"></div>
+                                        <input type="text" ng-model="$ctrl.detail" class="form-control">
                                         <br>
                                         <label for="researchHours">Required Hours Per Week</label>
+                                        <div ng-bind="$ctrl.currenthour"></div>
+                                        <input type="number" ng-model="$ctrl.hour" class="form-control">
+                                        <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateResearch()">Update</button>
                                         <br>
-                                        <label for="researchLocation">Location</label>
+                                        <div ng-if="$ctrl.rscUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
+                                        <div ng-if="$ctrl.rscUpdateSuc" class="alert alert-warning">Success!</div>
                                     </div>
                                 </div>
                             </div>
