--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -90,11 +90,19 @@
                 <div class="panel panel-default" id="panel3">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse3">Add Your Twitter Feed...</a>
+                            <a data-toggle="collapse" href="#collapse3" ng-click="$ctrl.getSocial()">Add Your Social Media Link</a>
                         </h4>
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
+                                <div>Twitter: {{$ctrl.currenttwitter}} </div>
+                                <input type="text" ng-model="$ctrl.twitter" class="form-control" placeholder="Twitter">
+                                <div>Linkedin: {{$ctrl.currentlinkedin}} </div>
+                                <input type="text" ng-model="$ctrl.linkedin" class="form-control" placeholder="Linkedin">
+                                <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateSocial()">Update</button>
+                                <br>
+                                <div ng-if="$ctrl.smUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
+                                <div ng-if="$ctrl.smUpdateSuc" class="alert alert-warning">Success!</div>
                         </div>
                     </div>
                 </div>
