--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -95,3 +95,12 @@ li a:hover {
 .table>tbody>tr>td.active {
   background-color: blue !important;
 }
+#researchArea{
+  margin-bottom: 11px !important;
+}
+.app-modal-window .modal-dialog {
+  width:1200px !important;
+}
+.app-modal-window .modal-content {
+  width:1200px !important;
+}
