--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -1,99 +1,138 @@
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancel()">&times;</button>
-    <h4 class="modal-title"> Edit What Students Can See</h4>
-</div>
-<div class="modal-body" id="edit-modal-body">
-    <!-- 
+<div class="modal-dialog" id="controlDialog">
+    <div class="modal-content" id="controlContent">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" ng-click="$ctrl.cancel()">&times;</button>
+            <h4 class="modal-title"> Edit What Students Can See</h4>
+        </div>
+        <div class="modal-body" id="edit-modal-body">
+            <!-- 
               Things that need to go here:
                 - Twitter
                 - Office Hours/Location
                 - Research Opportunities
              -->
-    <form>
-        <div id="accordion">
-            <div class="panel-group">
-                <div class="panel panel-default" id="panel1">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <div ng-repeat="course in $ctrl.courses track by $index">
-                                    <label> <a data-toggle="collapse" data-target="#{{$index}}">{{course.code}}
-                                            {{course.name}}</a></label>
-                                    <div id="{{$index}}" class="collapse">
-                                        <table class="table table-bordered">
-                                            <tr>
-                                                <th>Periods:</th>
-                                                <th>Monday</th>
-                                                <th>Tuesday</th>
-                                                <th>Wednesday</th>
-                                                <th>Thursday</th>
-                                                <th>Friday</th>
-                                            </tr>
-                                            <tr ng-repeat="period in $ctrl.periods">
-                                                <td>
-                                                    {{period.time}}
-                                                </td>
-                                                <td id="cell" ng-repeat="day in period.days track by $index"
-                                                    ng-click="$ctrl.togglePeriod($parent.$index, $index)" ng-class="{active: ($ctrl.checkCellState($parent.$index, $index) == true)}">
-
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-group">
-                <div class="panel panel-default" id="panel2">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse2">Add a Research Position...</a>
-                        </h4>
-                    </div>
-                    <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <h4>
-                                    Research Position(s)
+            <form>
+                <div id="accordion">
+                    <div class="panel-group">
+                        <div class="panel panel-default" id="panel1">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse1">Edit Your Courses and Office Hours</a>
                                 </h4>
-                                <div id="research-pos-field">
+                            </div>
+                            <div id="collapse1" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <div class="form-group">
+                                        <div ng-repeat="course in $ctrl.courses track by $index">
+                                            <label> <a data-toggle="collapse" data-target="#{{$index}}">{{course.code}}
+                                                    {{course.name}}</a></label>
+                                            <div id="{{$index}}" class="collapse">
+                                                <table class="table table-bordered">
+                                                    <tr>
+                                                        <th>Periods:</th>
+                                                        <th>Monday</th>
+                                                        <th>Tuesday</th>
+                                                        <th>Wednesday</th>
+                                                        <th>Thursday</th>
+                                                        <th>Friday</th>
+                                                    </tr>
+                                                    <tr ng-repeat="period in $ctrl.periods">
+                                                        <td>
+                                                            {{period.time}}
+                                                        </td>
+                                                        <td id="cell" ng-repeat="day in period.days track by $index"
+                                                            ng-click="$ctrl.togglePeriod($parent.$index, $index)"
+                                                            ng-class="{active: ($ctrl.checkCellState($parent.$index, $index) == true)}">
+
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-group">
+                        <div class="panel panel-default" id="panel2">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse2">Add a Research Position...</a>
+                                </h4>
+                            </div>
+                            <div id="collapse2" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <div class="form-group">
+                                        <h4>
+                                            Research Position(s)
+                                        </h4>
+                                        <div id="research-pos-field">
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    <label for="researchArea">Area of Research</label>
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    <input type="text" id="researchArea" name="researchArea" class="form-control"
+                                                        ng-model="$ctrl.resPos.area" placeholder="Spatial Computing"
+                                                        required autofocus>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    <label for="researchHours">Required Hours Per Week</label>
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    <input type="number" id="resHours" name="resHours" class="form-control"
+                                                        ng-model="$ctrl.resPos.hours" placeholder="12" required
+                                                        autofocus>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    <label for="researchLocation">Location</label>
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    <input type="text" id="resLoc" name="resLoc" class="form-control"
+                                                        ng-model="$ctrl.resPos.loc" placeholder="CSE 404" required
+                                                        autofocus>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-group">
+                        <div class="panel panel-default" id="panel3">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse3">Add Your Twitter Feed...</a>
+                                </h4>
+                            </div>
+                            <div id="collapse3" class="panel-collapse collapse">
+                                <div class="panel-body">
                                     <div class="row">
-                                        <label for="researchArea">Area of Research</label>
-                                        <br>
-                                        <label for="researchHours">Required Hours Per Week</label>
-                                        <br>
-                                        <label for="researchLocation">Location</label>
+                                        <div class="col-sm-4">
+                                            <span style="text-align: center !important"><label>Twitter Handle</label></span>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <div class="input-group" id="search-bar">
+                                                <span class="input-group-addon" id="sizing-addon1">@</span>
+                                                <input type="text" ng-model="search" class="form-control" placeholder="Search">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel-group">
-                <div class="panel panel-default" id="panel3">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse3">Add Your Twitter Feed...</a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="panel-collapse collapse">
-                        <div class="panel-body">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </form>
         </div>
-    </form>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" ng-click="$ctrl.cancel()" data-dismiss="modal">Close</button>
+        </div>
+    </div>
 </div>
