--- a/client/views/search.modal.view.html
+++ b/client/views/search.modal.view.html
@@ -19,14 +19,14 @@
                 <th>Save</th>
                 <th>Remove</th>
             </tr>
-            <tr ng-repeat="listing in listings | filter: search">
+            <tr ng-repeat="course in courses | filter: search">
 
-                <td>{{listing.code}}</td>
-                <td>{{listing.name}}</td>
+                <td>{{course.code}}</td>
+                <td>{{course.name}}</td>
                 <td><span ng-repeat="list in listing.instructor_names">{{list}}</span></td>
-                <td>{{listing.department}}</td>
-                <td>{{listing.description}}</td>
-                <td>{{listing.building}}<button ng-click="findLocation($index)">click me</button><span>{{mapLat}}
+                <td>{{course.department}}</td>
+                <td>{{course.description}}</td>
+                <td>{{course.building}}<button ng-click="findLocation($index)">click me</button><span>{{mapLat}}
                         {{mapLong}}</span></td>
                 <!-- <td>
                               <h2>Update Listing</h2>
